# Embodied-RobotSim

./: .gitignore  README.md  README_en.md  start_explore_mapping.sh  start_llm_agent.sh  start_navigation.sh  start_navigation_and_pick_demo.sh  start_pick_and_place_demo.sh  stop_robot_sim.sh
src/graspnet_infer/graspnet_ros/: CMakeLists.txt  README.md  package.xml
src/graspnet_infer/graspnet_ros/config/: config.yaml
src/graspnet_infer/graspnet_ros/include/graspnet_ros/: cuda_utils.hpp  grasp_processing.hpp  graspnet_cpp.hpp  transform_utils.hpp  trt_wrapper.hpp  visualization_utils.hpp
src/graspnet_infer/graspnet_ros/src/: grasp_processing.cpp  graspnet_cpp.cpp  graspnet_node.cpp  transform_utils.cpp  trt_wrapper.cpp  visualization_utils.cpp
src/graspnet_infer/tensorrt_plugins/: CMakeLists.txt  README.md  build.sh  fps_onnx_op.py  fps_plugin.cpp  fps_plugin.cu  fps_plugin.h  register_plugin.py
src/x_bot/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/x_bot/config/: fr3_controllers.yaml  initial_positions.yaml  joint_limits.yaml  mapper_params_online_async.yaml  moveit_controllers.yaml  moveit_params.yaml  nav2_params.yaml  nav2_params_cartographer.yaml  octomap_server.yaml  ompl_planning.yaml  sensors_3d_x_bot.yaml  x_bot.srdf
src/x_bot/config/cartographer/: x_bot_2d.lua
src/x_bot/launch/: cartographer.launch.py  gz.launch.py  mapping.launch.py  move_group.launch.py  moveit.launch.py  nav2.launch.py  nav2_cartographer.launch.py  octomap_server.launch.py  rviz.launch.py  x_bot_gz_spawn.launch.py
src/x_bot/maps/: map.pgm  map.yaml
src/x_bot/meshes/: x_bot_mesh.dae
src/x_bot/models/simple_house/Coke/: model.sdf
src/x_bot/models/simple_house/MaleVisitorSit/: model.sdf
src/x_bot/models/simple_house/Water Bottle/: model.sdf
src/x_bot/models/simple_house/Weston_No_22_Cajun_Jerky_Tonic_12_fl_oz_nLj64ZnGwDh/: model.sdf
src/x_bot/models/simple_house/Womens_Bluefish_2Eye_Boat_Shoe_in_Linen_Oat/: metadata.pbtxt  model.config  model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_AirconditionerA_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_AirconditionerB_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_BalconyTable_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Ball_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Bed_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Board_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Carpet_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_ChairA_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_ChairD_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Chandelier_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_CoffeeTable_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_CookingBench_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Curtain_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitA_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitA_02/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitB_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitB_02/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitC_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitC_02/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitD_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitD_02/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitD_03/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_DeskPortraitD_04/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Door_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Dumbbell_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_FitnessEquipment_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_FloorB_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_FoldingDoor_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_FoldingDoor_02/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Handle_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_HouseWallB_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_KitchenCabinet_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_KitchenTable_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_KitchenUtensils_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_LightC_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_NightStand_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_Pillow_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_PortraitA_01/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_PortraitA_02/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_PortraitB_01/: model.sdf
src/x_bot/rviz/: cartographer.rviz  map.rviz  moveit.rviz  octomap.rviz
src/x_bot/scripts/: pick_and_place_demo.py  teleop_keyboard.py  tf_to_odom.py
src/x_bot/src/: robot_actions.cpp
src/x_bot/urdf/: fr3_ros2_control.xacro  gz.xacro  intel_rgbd_cam_d435.urdf.xacro  macros.xacro  materials.xacro  x_bot.xacro
src/x_bot/worlds/: manipulation_test.sdf  simple_room.sdf  small_house.sdf  ware_house.sdf
src/yoloe_infer/: CMakeLists.txt  package.xml
src/yoloe_infer/configs/: config.yaml
src/yoloe_infer/include/: pointcloud_colorizer.hpp  ros2_trt_infer_text_prompt_multi_node.hpp  simple_tokenizer.hpp  trt_engine.hpp
src/yoloe_infer/src/: pointcloud_colorizer.cpp  ros2_trt_infer_text_prompt_multi_node.cpp  simple_tokenizer.cpp  trt_engine.cpp
(+85 files in other folders)
