<?xml version="1.0"?>
<package format="2">
	<name>x_bot</name>
	<version>2.0.0</version>
	<description>x_bot</description>

	<maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
	<maintainer email="devanshu@blackcoffeerobotics.com">Devanshu Sharma</maintainer>
	<maintainer email="angelo@blackcoffeerobotics.com">Angelo Antu</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<!-- Build dependencies for C++ -->
	<build_depend>rclcpp</build_depend>
	<build_depend>moveit_ros_planning_interface</build_depend>
	<build_depend>tf2</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>ament_index_cpp</build_depend>
	<build_depend>yaml-cpp</build_depend>
	<build_depend>control_msgs</build_depend>
	<build_depend>rclcpp_action</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>cv_bridge</build_depend>

	<!-- Exec dependencies -->
	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>rclcpp</exec_depend>
	<exec_depend>moveit_ros_planning_interface</exec_depend>
	<exec_depend>tf2</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>std_srvs</exec_depend>
	<exec_depend>ament_index_cpp</exec_depend>
	<exec_depend>yaml-cpp</exec_depend>
	<exec_depend>control_msgs</exec_depend>
	<exec_depend>rclcpp_action</exec_depend>
	<exec_depend>franka_description</exec_depend>
	<exec_depend>ros_gz_sim</exec_depend>
	<exec_depend>ros_gz_bridge</exec_depend>
	<exec_depend>joint_trajectory_controller</exec_depend>
	<exec_depend>position_controllers</exec_depend>
	<exec_depend>joint_state_broadcaster</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>pcl_conversions</exec_depend>
	<exec_depend>cv_bridge</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
